--- a/dapp/public/locales/ZH_CN/common.json
+++ b/dapp/public/locales/ZH_CN/common.json
@@ -25,7 +25,7 @@
     "View-Your-NFT": "在测试网资源管理器上查看您的NFT",
     "Success": "成功",
   "Practice-Mode": "练习模式",
-  "Arena-Mode-Earn": "竞技场模式 (获得Sui)",
+  "Arena-Mode-Earn": "竞技场模式 (赢取Sui)",
   "Cost-more-earn-more": "成本更高，赚取更多",
   "Please-enter-your-chess-name": "请输入您的棋牌名称",
   "Check-the-developer-console-to-see-the-result": "查看开发者控制台以查看结果。",
