--- a/dapp/public/locales/ZH_CN/common.json
+++ b/dapp/public/locales/ZH_CN/common.json
@@ -1,29 +1,29 @@
 {
-    "Connect": "连接",
-    "Register-Account": "注册账号",
-    "Please-input-your-name": "请输入您的名称",
-    "Register-your-Account": "注册您的账号",
-    "Name": "名称",
-    "Invite-Code-Optional": "邀请码（可选）",
-    "Wallet-Address": "钱包地址",
-    "Register": "注册",
-    "Instruction": "说明",
-    "Normal-Mode": "|普通模式|",
-    "Normal-Mode-text": "练习并构建您的阵容，与不同的玩家对战，您的敌人将是其他玩家过去的阵容记录。",
-    "Arena-Mode": "|竞技场模式|",
-    "Arena-Mode-text": "您需要支付一定的SUI门票费用才能进入，您随时可以结算并获得奖励，结算奖励取决于您的战斗胜利记录，所以努力赢得更多的SUI。支付的越多，赢得的就越多。通常来说，赢得三次就可以收回成本。",
-    "How-to-play": "|玩法|",
-    "How-to-play-text": "每一回合，您将获得10个硬币来购买角色，不同的角色拥有特定的特点，尝试使用它来获得优势。",
-    "Problem-Feedback": "|问题反馈|",
-    "Buy": "购买",
-    "Level-Up": "升级",
-    "Merge-to-level-up": "合并3个相同的角色以升级",
-    "Fight": "战斗",
-    "Recent-Records": "最近记录",
-    "View-the-NFT": "查看您在测试网上创建和转移的NFT",
-    "Mint-and-Transfer": "铸造和转移",
-    "View-Your-NFT": "在测试网资源管理器上查看您的NFT",
-    "Success": "成功",
+  "Connect": "连接",
+  "Register-Account": "注册账号",
+  "Please-input-your-name": "请输入您的名称",
+  "Register-your-Account": "注册您的账号",
+  "Name": "名称",
+  "Invite-Code-Optional": "邀请码（可选）",
+  "Wallet-Address": "钱包地址",
+  "Register": "注册",
+  "Instruction": "游戏说明",
+  "Normal-Mode": "|普通模式|",
+  "Normal-Mode-text": "练习并构建您的阵容，与不同的玩家对战，您的敌人将是其他玩家过去的阵容记录。",
+  "Arena-Mode": "|竞技场模式|",
+  "Arena-Mode-text": "您需要支付一定的SUI门票费用才能进入，您随时可以结算并获得奖励，结算奖励取决于您的战斗胜利记录，所以努力赢得更多的SUI。支付的越多，赢得的就越多。通常来说，赢得三次就可以收回成本。",
+  "How-to-play": "|玩法|",
+  "How-to-play-text": "每一回合，您将获得10个硬币来购买角色，不同的角色拥有特定的特点，尝试使用它来获得优势。",
+  "Problem-Feedback": "|问题反馈|",
+  "Buy": "购买",
+  "Level-Up": "升级",
+  "Merge-to-level-up": "合并3个相同的角色以升级",
+  "Fight": "战斗",
+  "Recent-Records": "最近记录",
+  "View-the-NFT": "查看您在测试网上创建和转移的NFT",
+  "Mint-and-Transfer": "铸造和转移",
+  "View-Your-NFT": "在测试网资源管理器上查看您的NFT",
+  "Success": "成功",
   "Practice-Mode": "练习模式",
   "Arena-Mode-Earn": "竞技场模式 (赢取Sui)",
   "Cost-more-earn-more": "成本更高，赚取更多",
@@ -64,16 +64,16 @@
   "You-can-redeem-sui-as-rewards": "您可以兑换Sui作为奖励，金额取决于您的胜场记录，确定结账吗？",
   "Continue-Game": "继续游戏",
   "Filters": "筛选",
-  "Include-Checked": "包括已选中的",
+  "Include-Checked": "包括已核销的",
   "no-records": "无记录",
   "Arena": "（竞技场）",
   "Mode": "模式",
-  "free": "免费",
+  "free": "练习",
   "arena": "竞技场",
   "win": "胜利",
   "lose": "失败",
   "Redeem": "兑换",
-  "Checked": "已选中",
+  "Checked": "已核销",
   "View-your-cloned-NFT": "在测试网资源管理器上查看您克隆的NFT",
   "Clone-an-NFT": "克隆NFT",
   "View-Coin-burn-transaction": "在测试网资源管理器上查看代币销毁交易",
@@ -98,5 +98,7 @@
   "redeem-failed": "兑换失败",
   "redeem-success": "兑换成功",
   "Money-is-not-enough": "金币不足",
-  "Refresh": "刷新"
+  "Refresh": "刷新",
+  "you_lose": "你输了",
+  "you_win": "你赢了!"
 }
