--- a/dapp/public/locales/ZH_CN/common.json
+++ b/dapp/public/locales/ZH_CN/common.json
@@ -104,6 +104,6 @@
   "Enter-your-chess-name": "请输入您的游戏名称",
   "Active-skill": "主动技能",
   "Passive-skill": "被动技能",
-  "HP": "生命值",
-  "ACK": "攻击力"
+  "HP": "生命",
+  "ACK": "攻击"
 }
