--- a/dapp/public/locales/EN/common.json
+++ b/dapp/public/locales/EN/common.json
@@ -105,5 +105,6 @@
     "HP": "HP",
     "ACK": "ACK",
     "you_lose": "you lose",
-    "you_win": "you win!"
+    "you_win": "you win!",
+    "rank-activity-locked": "challenge activity rewards are locked, please wait for the next event~"
 }
