--- a/dapp/public/locales/EN/common.json
+++ b/dapp/public/locales/EN/common.json
@@ -47,7 +47,8 @@
     "InviteNum": "InviteNum",
     "Invitor": "Invitor",
     "INVITE": "INVITE",
-    "CLAIM-REWARDS": "CLAIM REWARDS",
+    "CLAIM-REWARDS": "CLAIM SUI REWARDS",
+    "Best-Rank": "Best Rank",
     "Skills-Unlock": "Skills Unlock",
     "Unlock": "Unlock",
     "View-the-NFT-modified": "View the NFT you created and modified on the TestNet Explorer",
