--- a/dapp/public/locales/ZH_CN/common.json
+++ b/dapp/public/locales/ZH_CN/common.json
@@ -47,7 +47,8 @@
   "InviteNum": "邀请数量",
   "Invitor": "邀请者",
   "INVITE": "邀请",
-  "CLAIM-REWARDS": "领取奖励",
+  "CLAIM-REWARDS": "领取SUI奖励",
+  "Best-Rank": "最佳排名",
   "Skills-Unlock": "技能解锁",
   "Unlock": "解锁",
   "View-the-NFT-modified": "在测试网资源管理器上查看您创建和修改的NFT",
