--- a/dapp/public/locales/EN/common.json
+++ b/dapp/public/locales/EN/common.json
@@ -8,12 +8,18 @@
     "Wallet-Address": "Wallet Address",
     "Register": "Register",
     "Instruction": "Instruction",
-    "Normal-Mode": "|Normal Mode|",
+    "Normal-Mode": "Normal Mode",
     "Normal-Mode-text": "practice and construct your lineup to fight with different players, your enemy would be other players’ past lineup records.",
-    "Arena-Mode": "|Arena Mode|",
+    "Arena-Mode": "Arena Mode",
     "Arena-Mode-text": "you have to pay some SUI ticket fee to enter, and you can check out to get rewards at anytime, the checkout reward depends on your fighting winning records, so try to win to get earn more sui. The more you pay, the more you win. Averagely, winning at three times would cover the cost.",
-    "How-to-play": "|How to play|",
+    "level-up": "Level up",
+    "How-to-play": "How to play",
     "How-to-play-text": "Every turn, you will have 10 coins to buy your charactors, different charactors own its specific feature, try to use it to gain advantage.",
+    "How-to-level-up": "Every charactor can level up by synthesis, at most to 3 star level 9.",
+    "activity1": "Invite Rewards Event",
+    "activity2": "Arena Challenge Event",
+    "activity1-content": "By successfully inviting friends to participate in the game (attend at least 1 arena game), you can participate in the bonus pool dividend activity. Click on my account information to claim sui rewards.",
+    "activity2-content": "After you won 10 rounds of arena battles, you can participate in the arena rankings challenge, if you rank into the top 20. at the end of the event, you can share a larger prize pool.",
     "Problem-Feedback": "|Problem Feedback|",
     "Buy": "Buy",
     "Level-Up": "Level Up",
