--- a/dapp/public/locales/ZH_CN/common.json
+++ b/dapp/public/locales/ZH_CN/common.json
@@ -8,12 +8,18 @@
   "Wallet-Address": "钱包地址",
   "Register": "注册",
   "Instruction": "游戏说明",
-  "Normal-Mode": "|普通模式|",
+  "Normal-Mode": "普通模式",
   "Normal-Mode-text": "练习并构建您的阵容，与不同的玩家对战，您的敌人将是其他玩家过去的阵容记录。",
-  "Arena-Mode": "|竞技场模式|",
+  "Arena-Mode": "竞技场模式",
   "Arena-Mode-text": "您需要支付一定的SUI门票费用才能进入，您随时可以结算并获得奖励，结算奖励取决于您的战斗胜利记录，所以努力赢得更多的SUI。支付的越多，赢得的就越多。通常来说，赢得三次就可以收回成本。",
-  "How-to-play": "|玩法|",
+  "level-up": "升级",
+  "How-to-play": "玩法",
   "How-to-play-text": "每一回合，您将获得10个硬币来购买角色，不同的角色拥有特定的特点，尝试使用它来获得优势。",
+  "How-to-level-up": "每个角色可以通过同角色进行合成提升等级，最高3星9级。",
+  "activity1": "邀请有礼",
+  "activity2": "竞技场争霸",
+  "activity1-content": "通过成功邀请好友参与游戏（完成至少1局竞技场），您可以参与奖金池分红活动，点击我的账户信息即可领取sui分红奖励。",
+  "activity2-content": "当你完成10局竞技场战斗胜利后，你可以参与竞技场排行榜，占据排行前20的玩家，活动结束后可瓜分更大奖池。",
   "Problem-Feedback": "|问题反馈|",
   "Buy": "购买",
   "Level-Up": "升级",
